tests/errors/test_63.xpp
// Cannot mutate field from a const declared class identifier

class IntBox {
    pub mut x: i64;

    pub IntBox(x_: i64) {
        x = x_;
    }

    pub fn get_x() i64 {
        return x;
    }

}

fn main() void {
    let box = IntBox(43);
    box.x = 45;
}

